fixed the header spacing and some minor details

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 .container {
     display: grid;
-    grid-template-rows: 1fr 3fr;
+    grid-template-rows: 1fr 4fr;
     grid-template-columns: 1fr 3fr;
     gap: 20px;
 }
@@ -47,7 +47,6 @@
 /*HEADER*/
 .upper, .bottom { width: 100%; }
 .upper { height: 35%; }
-.bottom { height: 65%; }
 
 .upper .searchbar {
     background-color: gray;
@@ -91,20 +90,19 @@
 
     background-color: black;
     border-style: solid;
-    border-radius: 100%;
+    border-radius: 50%;
 }
 
 .bottom .left .profile { height: 75px; width: 75px; }
 
-.bottom .right {
-    justify-content: space-between;
-    padding: 3rem;
-}
+.bottom .right { justify-content: space-between; }
 
 .bottom .right div {
     background-color: lightblue;
-    padding: 2rem;
+    padding: 2.5rem;
     padding-top: 1rem; padding-bottom: 1rem;
 
     border-radius: 2rem;
 }
+
+/*CONTENT MAIN*/
